menu overflow fixed

--- a/app/stylus/blocks/checkout.styl
+++ b/app/stylus/blocks/checkout.styl
@@ -255,6 +255,9 @@ third()
         overflow hidden
         hyphens()
 
+        @media (min-width 1200px)
+            font-size 28px
+
         &:focus
             outline-color #a35200
 
