--- a/app/stylus/blocks/menu.styl
+++ b/app/stylus/blocks/menu.styl
@@ -76,19 +76,16 @@ menu__icon()
         width 100%
         background-color rgba(0, 0, 0, 0.05)
         z-index 9999
-        max-height 0
         overflow hidden
-        transition all .4s ease-out 0s
-
-        &.open
-            max-height 190px
+        transition all 0s ease-out 0s
+        height auto
+        display none
 
         @media (min-width 768px)
             position static
             background-color transparent
             display block
             text-align center
-            max-height 50000px
 
         @media (min-width 1200px)
             text-align right
